add basic logic and flow for application.  Application still has a couple bugs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <form id="input">
         <div class="form-group">
-          <label for="number-input">Enter a number to see the roman numeral:</label><br>
+          <label for="number-input">Enter a number and see your life transformed:</label><br>
           <input id="number-input" type="text">
         </div>
         <button type="submit" class="btn btn-warning">Find out!</button>
