finish all basic code, adding complete funtionallity.  Styling still needed.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <br>
       <div id="output" class="well">
         <ul>
-
+          <!--text will be inserted here from JS -->
         </ul>
       </div>
 
