adds final styling and functionallity to page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       </div>
       <div class="row">
         <form id="input" class=" col-md-3 col-sm-12 col-xs-12" >
-          <input id="number-input" type="text" class="form-control" value="Enter your number here:"><p class="warning-label"></p>
+          <input id="number-input" type="text" class="form-control" placeholder="Enter your number here:"><p class="warning-label"></p>
           <button type="submit" class="btn btn-warning">Transform!</button>
+
           <h5>Ping will transform the list of numbers by:</h5>
           <ul>
             <li>Changing numbers divisible by 3 to "ping"</li>
@@ -26,13 +27,16 @@
         </form>
 
         <div id="output" class="well col-md-6 col-sm-12 col-xs-12">
+          <h3>Your result will appear here!</h3>
           <ul id="list-items">
             <!--text will be inserted here from JS -->
           </ul>
         </div>
 
         <div id="about" class="col-md-3 col-sm-12 col-xs-12">
-          <h3>Brian Pritt</h3>
+          <img src="img/brian.jpg" alt="brian smiling" />
+          <h3><a href="https://github.com/brianpritt">Brian Pritt</a></h3>
+          <h4><a href="https://www.epicodus.com/">Epicodus</a><h3>
           <h4>Intro to Programming</h4>
           <h4>October 2016 Cohort</h4>
         </div>
