--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <script src="js/scripts.js"></script>
     <title>Ping-Pong</title>
   </head>
+
   <body>
     <div class="container">
       <div class="heading">
         <h1>Ping-Pong</h1>
         <h4>Ping-Pong will count up to the number you give.</h4>
       </div>
+
       <div class="row">
         <form id="input" class=" col-md-3 col-sm-12 col-xs-12" >
           <input id="number-input" type="text" class="form-control" placeholder="Enter your number here:"><p class="warning-label"></p>
           <button type="submit" class="btn btn-warning">Transform!</button>
 
-          <h5>Ping will transform the list of numbers by:</h5>
+          <h5>Ping-Pong will transform the list of numbers by:</h5>
           <ul>
             <li>Changing numbers divisible by 3 to "ping"</li>
             <li>Changing numbers divisible by 5 to "pong"</li>
